# win32-cmake-template

./: BuildOptions.cmake  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: MainWindow.h  framework.h  messages.h  notificationIcon.h
app/resources/: WinApp.rc  app.manifest  resource.h
app/src/: MainWindow.cpp  aboutdialog.cpp  notificationIcon.cpp  winMain.cpp
libs/supportlib/: CMakeLists.txt
libs/supportlib/include/supportlib/: Support.h  framework.h
libs/supportlib/src/: Support.cpp
tests/supportlib.tests/: CMakeLists.txt  Support.Tests.cpp
